--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "tiles": "node tiles.cjs"
   },
   "dependencies": {
+    "@turf/turf": "^7.2.0",
     "leaflet": "^1.9.4",
+    "leaflet-editable": "^1.3.1",
     "sharp": "^0.33.5",
     "vue": "^3.5.13"
   },
